<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:focusableInTouchMode="true"

    tools:context=".ui.register.FragmentRegister">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="327dp"
        android:layout_height="35dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="625dp"
        android:text="@string/registerSignUp"
        android:textAlignment="center"
        android:textAppearance="@style/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="327dp"
        android:layout_height="21dp"
        android:text="@string/registerDescription"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/tbFullName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/tbFullName"
        android:layout_width="327dp"
        android:layout_height="53dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="201dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/input"
        android:hint="@string/full_name"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:textColor="#ffffff"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/tbEmail"
        android:layout_width="327dp"
        android:layout_height="53dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="270dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/input"
        android:hint="@string/email_address"
        android:textColor="#ffffff"

        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/tbPassword"
        android:layout_width="327dp"
        android:layout_height="53dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="339dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/input"
        android:textColor="#ffffff"

        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tbForgot_pass"
        android:layout_width="121dp"
        android:layout_height="24dp"
        android:layout_marginStart="255dp"
        android:layout_marginTop="17dp"
        android:text="@string/forgot_pass"
        android:textAppearance="@style/forgot_pass"
        app:layout_constraintEnd_toEndOf="@+id/tbPassword"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbPassword"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="327dp"
        android:layout_height="63dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="150dp"
        android:background="@drawable/button"
        android:text="@string/registerSignUp"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbForgot_pass"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tbSignInNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/already_hav"
        android:textAppearance="@style/already_hav"
        android:textColor="#ffffff"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerButton"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>