<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:focusableInTouchMode="true"
    tools:context=".ui.forgotPassword.FragmentForgotPassword">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frame_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-300dp"

        tools:ignore="MissingConstraints">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnReset"
        android:layout_width="327dp"
        android:layout_height="63dp"
        android:layout_marginTop="52dp"
        android:background="@color/purple_200"
        android:text="@string/forgot_pass_reset_pass"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="@+id/tbLoginInput"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tbLoginInput"
        app:layout_constraintTop_toBottomOf="@+id/tbLoginInput"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/tbLoginInput"
        android:layout_width="327dp"
        android:layout_height="52dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/input"
        android:hint="@string/email_address"
        android:padding="10dp"

        android:textAppearance="@style/forgot_pass"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="@+id/login_or_si"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/login_or_si"
        app:layout_constraintTop_toBottomOf="@+id/login_or_si"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/login_or_si"
        android:layout_width="327dp"
        android:layout_height="36dp"
        android:layout_marginTop="28dp"
        android:gravity="center_horizontal|top"
        android:text="@string/login_or_si"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="@+id/sign_up"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/sign_up"
        app:layout_constraintTop_toBottomOf="@+id/sign_up"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="327dp"
        android:layout_height="35dp"
        android:layout_marginTop="156dp"
        android:gravity="center_horizontal|top"
        android:text="@string/sign_up"

        android:textAppearance="@style/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnLoginPage"
        android:layout_width="174dp"
        android:layout_height="51dp"
        android:background="@color/purple_200"
        android:text="@string/forgot_pass_back_login"

        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnReset"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/btnReset"
        app:layout_constraintTop_toBottomOf="@+id/btnReset"
        app:layout_constraintVertical_bias="0.505"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>