<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:focusableInTouchMode="true"

    tools:context="ui.login.FragmentLogin">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frame_4"
        android:layout_width="334dp"
        android:layout_height="295dp"
        android:layout_marginTop="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TextView

            android:id="@+id/tblogin"
            android:layout_width="324dp"
            android:layout_height="43dp"
            android:layout_marginBottom="16dp"
            android:gravity="center_horizontal|top"
            android:text="@string/loginButton"
            android:textAppearance="@style/login"
            app:layout_constraintBottom_toTopOf="@+id/login_or_si"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/login_or_si"
            android:layout_width="327dp"
            android:layout_height="0dp"
            android:layout_marginTop="49dp"
            android:layout_marginBottom="40dp"
            android:gravity="center_horizontal|top"
            android:text="@string/loginDescription"
            android:textAppearance="@style/login_or_sign"
            app:layout_constraintBottom_toTopOf="@+id/tbLoginMail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/tbLoginMail"
            android:layout_width="327dp"
            android:layout_height="53dp"
            android:layout_marginBottom="100dp"
            android:background="@drawable/input"
            android:hint="@string/email_address"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingStart="10dp"

            android:textColorHint="#546E7A"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/tbLoginPassword"
            android:layout_width="327dp"
            android:layout_height="53dp"
            android:layout_marginBottom="30dp"
            android:autofillHints="password"
            android:background="@drawable/input"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:textColorHint="#546E7A"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tbForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/sign_up"
            android:textColor="#ffffff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tbLoginPassword"
            app:layout_constraintTop_toBottomOf="@+id/tbLoginPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="327dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/button"
        android:text="@string/loginButton"
        android:textAppearance="@style/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame_4"
        tools:ignore="MissingConstraints,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/tbSignupNow"
        android:layout_width="168dp"
        android:layout_height="20dp"
        android:layout_marginBottom="-120dp"
        android:text="@string/new_user_si"
        android:textAppearance="@style/new_user_sign"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
        app:layout_constraintVertical_bias="0.369"
        tools:ignore="MissingConstraints,TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="237dp"
        android:layout_height="200dp"
        android:contentDescription="TODO"
        android:src="@drawable/splash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,ImageContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>