<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"

    tools:context=".ui.profile.logout.FragmentProfilLogout">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:text="@string/profil_bilgi"
        android:textColor="#ffffff"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tbFullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:textColor="#ffffff"

        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tbMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:textColor="#ffffff"

        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/tbFullName"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="217dp"
        android:layout_height="53dp"
        android:layout_marginBottom="84dp"
        android:background="@color/purple_200"
        android:text="@string/profil_bilgi_guncelle"
        android:textColor="#ffffff"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/tbFullName"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnExit"
        android:layout_width="139dp"
        android:layout_height="48dp"
        android:layout_marginTop="124dp"
        android:background="@color/purple_200"
        android:text="@string/profile_cikis"
        android:textColor="#ffffff"

        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/btnUpdate"
        app:layout_constraintStart_toStartOf="@+id/btnUpdate"
        app:layout_constraintTop_toBottomOf="@+id/btnUpdate"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnUserComments"
        android:layout_width="140dp"
        android:layout_height="59dp"
        android:background="@color/purple_200"
        android:text="@string/my_comments"

        android:textColor="#ffffff"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btnExit"
        app:layout_constraintEnd_toEndOf="@+id/btnUpdate"
        app:layout_constraintStart_toStartOf="@+id/btnUpdate"
        app:layout_constraintTop_toBottomOf="@+id/btnUpdate"
        tools:ignore="MissingConstraints" />



</androidx.constraintlayout.widget.ConstraintLayout>