<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:background="@drawable/background"

    tools:context=".ui.profile.update.FragmentUpdate">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frame_4"
        android:layout_width="334dp"
        android:layout_height="295dp"
        android:layout_marginTop="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/tbUpdateFullName"
            android:layout_width="327dp"
            android:layout_height="53dp"
            android:layout_marginBottom="180dp"
            android:background="@drawable/input"
            android:hint="@string/full_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingStart="10dp"

            android:textColorHint="#546E7A"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tbUpdateEmail"
            app:layout_constraintStart_toStartOf="@+id/tbUpdateEmail"
            tools:ignore="TextContrastCheck" />

        <TextView

            android:id="@+id/tbUpdate"
            android:layout_width="324dp"
            android:layout_height="43dp"
            android:gravity="center_horizontal|top"
            android:text="@string/updateText"
            android:textAppearance="@style/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/tbUpdateEmail"
            android:layout_width="327dp"
            android:layout_height="53dp"
            android:layout_marginBottom="108dp"
            android:background="@drawable/input"
            android:hint="@string/email_address"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingStart="10dp"

            android:textColorHint="#546E7A"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.571"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/tbUpdatePassword"
            android:layout_width="327dp"
            android:layout_height="53dp"
            android:layout_marginBottom="30dp"
            android:autofillHints="password"
            android:background="@drawable/input"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:textColorHint="#546E7A"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/buttonUpdate"
        android:layout_width="327dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/button"
        android:text="@string/updateText"
        android:textAppearance="@style/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame_4"
        tools:ignore="MissingConstraints,DuplicateSpeakableTextCheck" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="237dp"
        android:layout_height="200dp"
        android:src="@drawable/splash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,ImageContrastCheck"
        android:contentDescription="TODO" />

</androidx.constraintlayout.widget.ConstraintLayout>